<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.activities.ui.resetPassword.reset.TokenActivity">

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tokenTextView" />

    <EditText
        android:id="@+id/tokenEditText"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/token"
        app:layout_constraintBottom_toTopOf="@+id/ResetPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordEditText" />

    <Button
        android:id="@+id/ResetPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/change_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tokenTextView"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_password_and_token"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/ResetPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>