<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ui.resetPassword.recover.RecoverActivity">

    <TextView
        android:id="@+id/recoverTextView"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_to_send"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/recoverNextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailToChangePasswordEditText"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/prompt_email"
        app:layout_constraintBottom_toTopOf="@+id/recoverNextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoverTextView" />

    <Button
        android:id="@+id/recoverNextButton"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/next"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>